--- a/Lab_2/Lab_2.csproj
+++ b/Lab_2/Lab_2.csproj
@@ -82,7 +82,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lab\Lab_1.csproj">
+    <ProjectReference Include="..\Lab_1\Lab_1.csproj">
       <Project>{89ab7e4c-9587-44da-bf70-aa8240a78a57}</Project>
       <Name>Lab_1</Name>
     </ProjectReference>
